log

Thu 14 Mar 2024 05:45:02 PM UTC: 
 exercises.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c:1:3: error: stray ‘#’ in program
    1 | a #include <ctype.h>
      |   ^
exercises.c:1:1: error: unknown type name ‘a’
    1 | a #include <ctype.h>
      | ^
exercises.c:1:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
    1 | a #include <ctype.h>
      |            ^
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:395,
                 from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/sys/types.h:33:9: error: unknown type name ‘__u_char’
   33 | typedef __u_char u_char;
      |         ^~~~~~~~
Compilation failed
52a7cc0
Thu 14 Mar 2024 05:45:14 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:23:10: error: ‘numero_mayor’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   23 |   return numero_mayor;
      |          ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
823e527
Thu 14 Mar 2024 05:46:13 PM UTC: 
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:23:10: error: ‘numero_mayor’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   23 |   return numero_mayor;
      |          ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
98b391d
Thu 14 Mar 2024 05:47:52 PM UTC: 
 exercises.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  0|6
total_score: 10/70
7c5d665
Thu 14 Mar 2024 06:13:39 PM UTC: 
 exercises.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
c6ac06b
Thu 14 Mar 2024 06:23:30 PM UTC: 
 exercises.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:57:22: error: array subscript is not an integer
   57 |         nuevo_arreglo[newSize] = arr[i];
      |                      ^
exercises.c:61:10: error: function returns address of local variable [-Werror=return-local-addr]
   61 |   return nuevo_arreglo;
      |          ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ce58344
Thu 14 Mar 2024 06:26:28 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:57:22: error: array subscript is not an integer
   57 |         nuevo_arreglo[newSize] = arr[i];
      |                      ^
Compilation failed
43bea81
Thu 14 Mar 2024 06:27:03 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|4
total_score: 30/70
80241bc
Thu 14 Mar 2024 06:42:38 PM UTC: 
 exercises.c | 41 +++++++++++++++++++++++++++++++++++++++--
 1 file changed, 39 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:74:9: error: ‘true’ undeclared (first use in this function)
   74 |   while(true)
      |         ^~~~
exercises.c:6:1: note: ‘true’ is defined in header ‘<stdbool.h>’; did you forget to ‘#include <stdbool.h>’?
    5 | #include <string.h>
  +++ |+#include <stdbool.h>
    6 | 
exercises.c:74:9: note: each undeclared identifier is reported only once for each function it appears in
   74 |   while(true)
      |         ^~~~
test.c:382:5: error: ‘main’ is normally a non-static function [-Werror=main]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:410:1: error: expected declaration or statement at end of input
  410 | }
      | ^
test.c:7:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    7 | char msg[300];
      |      ^~~
In file included from test.c:1:
exercises.c:72:7: error: unused variable ‘result_size’ [-Werror=unused-variable]
   72 |   int result_size = size1 + size2;
      |       ^~~~~~~~~~~
At top level:
test.c:382:5: error: ‘main’ defined but not used [-Werror=unused-function]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:47:6: error: ‘readIntArray’ defined but not used [-Werror=unused-function]
   47 | void readIntArray(int arr[], int *size) {
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
71d776e
Thu 14 Mar 2024 06:43:00 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
test.c: In function ‘mergeSortedArrays’:
test.c:382:5: error: ‘main’ is normally a non-static function [-Werror=main]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:410:1: error: expected declaration or statement at end of input
  410 | }
      | ^
test.c:7:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    7 | char msg[300];
      |      ^~~
In file included from test.c:1:
exercises.c:73:7: error: unused variable ‘result_size’ [-Werror=unused-variable]
   73 |   int result_size = size1 + size2;
      |       ^~~~~~~~~~~
At top level:
test.c:382:5: error: ‘main’ defined but not used [-Werror=unused-function]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:47:6: error: ‘readIntArray’ defined but not used [-Werror=unused-function]
   47 | void readIntArray(int arr[], int *size) {
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f670b05
Thu 14 Mar 2024 06:45:06 PM UTC: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
test.c: In function ‘mergeSortedArrays’:
test.c:382:5: error: ‘main’ is normally a non-static function [-Werror=main]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:410:1: error: expected declaration or statement at end of input
  410 | }
      | ^
test.c:7:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    7 | char msg[300];
      |      ^~~
In file included from test.c:1:
exercises.c:73:7: error: unused variable ‘result_size’ [-Werror=unused-variable]
   73 |   int result_size = size1 + size2;
      |       ^~~~~~~~~~~
At top level:
test.c:382:5: error: ‘main’ defined but not used [-Werror=unused-function]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:47:6: error: ‘readIntArray’ defined but not used [-Werror=unused-function]
   47 | void readIntArray(int arr[], int *size) {
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
46ca04a
